[package]
name = "doda"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }  # Async runtime
libp2p = "0.52"  # P2P networking
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON support
ring = "0.16"  # Cryptography
blake3 = "1.3"  # Fast cryptographic hashing
async-trait = "0.1"  # Async traits support
futures = "0.3"  # Async utilities
base64 = "0.21"  # Base64 encoding/decoding
egui = "0.22"  # Immediate mode GUI
eframe = "0.22"  # egui framework
clap = { version = "4.3", features = ["derive"] }  # Command line argument parsing
